fixed up spacing

--- a/kanban.client/src/assets/scss/_variables.scss
+++ b/kanban.client/src/assets/scss/_variables.scss
@@ -1,8 +1,8 @@
 $body-bg: #f2f2f2;
 $primary: #93e2f0;
 $secondary: #FF3697;
-$danger: #227a73;
-$success: #80ED99;
+$danger: #35573d;
+$success: #3f6147;
 $warning: #FF7F50;
 $info: #22577A;
 $dark: #313130;
