--- a/kanban.client/src/assets/scss/main.scss
+++ b/kanban.client/src/assets/scss/main.scss
@@ -47,7 +47,7 @@ background-color: #80ED99;
 background-color: #C7F9CC;
 }
 .super-light-green{
-background-color: #f0fff1;
+background-color: #f0fff169;
 }
 .lightest-green-text{
 color: #C7F9CC;
@@ -66,6 +66,9 @@ background-color: #22577a7a;
 }
 .hover-white:hover{
   color:rgb(255, 255, 255)
+}
+.army{
+  color: olive;
 }
 
 
